index.html file pushed

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <p>Rishikesh and Haridwar serve as gateways to the Himalayan region. 
             Travelers often use these cities as starting points for journeys into the Himalayas, 
             whether for trekking, pilgrimage, or exploring the scenic beauty of the mountains.</p>
-         <strong><q>Yoga Capital of the World</q></strong><br><br>
-          
+
+         <strong><q>Yoga Capital of the World</q></strong><br>
+         <br>
          <strong><q>Gateway to the Ganges</q></strong>
     </body>
 </html>
