--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
          <strong><q>Yoga Capital of the World</q></strong><br>
          <br>
          <strong><q>Gateway to the Ganges</q></strong>
+         <hr>
+         <h2>List of Activites</h2>
+         <ol>
+            <li>Camping</li>
+            <li>Bungee Jumping</li>
+            <li>Wildlife Sanctuary</li>
+         </ol>
+
+       
     </body>
 </html>
