Unorderedlist is added

--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
          <br>
          <strong><q>Gateway to the Ganges</q></strong>
          <hr>
-         <h2>List of Activites</h2>
+         <h2>List of Activites and Food</h2>
          <ol>
             <li>Camping</li>
             <li>Bungee Jumping</li>
             <li>Wildlife Sanctuary</li>
          </ol>
+         <ul>
+            <li>Chhole Bhature</li>
+            <li>Paranthas</li>
+            <li>Paneer Dishes</li>
+         </ul>
 
        
     </body>
