MyStats Index are changed

--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
             <li>Paneer Dishes</li>
          </ul>
         </ol>
-       
+        <a href="Mystats.html">MyStats_Link</a>
     </body>
 </html>
