Table add in Index

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
          <strong><q>Yoga Capital of the World</q></strong><br>
          <br>
          <strong><q>Gateway to the Ganges</q></strong>
-         <hr>
-         <h2>List of Activites and Food</h2>
+        <br>
+         <h2>List of Activites and Food<hr></h2>
          <ol>
             <li>Camping</li>
             <li>Bungee Jumping</li>
@@ -30,5 +30,40 @@
          </ul>
         </ol>
         <a href="Mystats.html">MyStats_Link</a>
+        <br><br>
+        <h2>My favorite Sports</h2>
+        <hr>
+        <table>
+            <tr>
+                <th>Sports</th>
+                <th>Reasons to recommend</th>
+                <th>Weakly Hours spent</th>
+            </tr>
+            <tr>
+                <td>Tennis</td>
+                <td>Tennis offers a combination of physical activity, mental stimulation, social interaction, and competitive 
+                    excitement that resonates with a wide range of people, making it a beloved sport around the world.</td>
+                <td>5~7 hrs</td>
+            </tr>
+            <tr>
+                <td>Badminton</td>
+                <td>I like badminton because it offers a fun and accessible way to stay physically active, fosters 
+                    social interaction, provides mental stimulation through strategy, can be played indoors or outdoors</td>
+                <td>8 hrs</td>
+            </tr>
+            <tr>
+                <td>Volley Ball</td>
+                <td>I like badminton because it offers a fun and accessible way to stay physically active, fosters 
+                    social interaction, provides mental stimulation through strategy, can be played indoors or outdoors</td>
+                <td>3 hrs</td>
+            </tr>
+            <tr>
+                <td>Ping Pong</td>
+                <td>It's easy to set up and play, making it accessible to people of all ages. Ping pong can be 
+                    enjoyed both recreationally and competitively, providing a fun way to stay active and improve 
+                    hand-eye coordination.</td>
+                <td>5 hrs</td>
+            </tr>
+        </table>
     </body>
 </html>
