--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         </title>
     </head>
     <body>
+        <a href="Bonus.html">Redirects to the Bonus.html</a>
         <h1>Nikhila Mateti</h1>
         <h6>My favorite Vacation spot is Rishikesh and Haridwar</h6>
         <p>Rishikesh and Haridwar are beloved destinations for a variety of reasons, 
@@ -130,6 +131,6 @@
             
             &lt;/html&gt;    
         </pre>
-
+       
     </body>
 </html>
