--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <br><br>
         <h2>My favorite Sports</h2>
         <hr>
+        <p>Below table describes the games that I always show interest to play such as Tennis, Badminton, Volley Ball, Ping pong</p>
         <table>
             <tr>
                 <th>Sports</th>
@@ -73,7 +74,8 @@
         <h2>Code Snippet</h2>
         <hr>
         <blockquote cite="https://stackoverflow.com/questions/31692041/how-to-use-div-to-split-screen-in-bottom-and-top-section-where-bottom-is-fixed-h">How to use div to split screen in bottom and top section where bottom is fixed height and top takes remaining space</blockquote>
-        <a href="https://css-tricks.com/snippets/html/top-bottom-halves-layout/">top-Bottom-halves-layout</a>
+        <a href="https://css-tricks.com/snippets/html/top-bottom-halves-layout/">Top-Bottom-Halves-Layout</a><br>
+        <a href="https://stackoverflow.com/questions/31692041/how-to-use-div-to-split-screen-in-bottom-and-top-section-where-bottom-is-fixed-h">Stackoverflow</a>
         <pre>
             &lt;html xmlns=&quot;http://www.w3.org/1999/xhtml&quot;&gt;
 
